# python-apple-playlist-exporter

./: .gitignore  README.md  pyproject.toml
apple_playlist_exporter/: custom_types.py  dto.py  main.py  scraper.py
apple_playlist_extractor/: dto.py  main.py  scraper.py
